Fix for lighthouse challenge

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         margin: 0;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', san-serif;
         color: #000;
-        background-color: #bb5f5f;
+        background-color: #800080;
         display: flex;
       }
     </style>
