--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
         margin: 0;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', san-serif;
         color: #000;
-        background-color: #bb5f5f;
+        background-color: #800080;
         display: flex;
-      }</style><title>A Simple Covid-19 Estimator</title><script defer="defer" src="main.js?026e1b5fe905b86d88fe"></script></head><body><div id="app"></div></body></html>
+      }</style><title>A Simple Covid-19 Estimator</title><script defer="defer" src="main.js?29c14cf1b46e78f16ac2"></script></head><body><div id="app"></div></body></html>
